--- a/Notes_leo/acronyms.tex
+++ b/Notes_leo/acronyms.tex
@@ -19,6 +19,7 @@
 \newacronym{MCMC}{MCMC}{Monte Carlo Markov Chain}
 \newacronym{MOTS}{MOTS}{Multi Objective Time Series}
 \newacronym{MRF}{MRF}{Markov Random Field}
+\newacronym{NLP}{NLP}{Natural Language Processing}
 \newacronym{NN}{NN}{Neural Networks}
 \newacronym{PCD}{PCD}{Persistent Contrastive Divergence}
 \newacronym{RBM}{RBM}{Restricted Boltzmann Machine}
