--- a/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
+++ b/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
@@ -1,7 +1,7 @@
-% v2-acmtog-sample.tex, dated March 7 2012
-% This is a sample file for ACM Transactions on Graphics
+% v2-acmsmall-sample.tex, dated March 6 2012
+% This is a sample file for ACM small trim journals
 %
-% Compilation using 'acmtog.cls' - version 1.2 (March 2012), Aptara Inc.
+% Compilation using 'acmsmall.cls' - version 1.3 (March 2012), Aptara Inc.
 % (c) 2010 Association for Computing Machinery (ACM)
 %
 % Questions/Suggestions/Feedback should be addressed to => "acmtexsupport@aptaracorp.com".
@@ -9,8 +9,18 @@
 %
 % Steps to compile: latex, bibtex, latex latex
 %
-% For tracking purposes => this is v1.2 - March 2012
-\documentclass{article} % V1.2
+% For tracking purposes => this is v1.3 - March 2012
+
+\documentclass[prodmode,acmtecs]{acmsmall} % Aptara syntax
+
+% Package to generate and customize Algorithm as per ACM style
+\usepackage[ruled]{algorithm2e}
+\renewcommand{\algorithmcfname}{ALGORITHM}
+\SetAlFnt{\small}
+\SetAlCapFnt{\small}
+\SetAlCapNameFnt{\small}
+\SetAlCapHSkip{0pt}
+\IncMargin{-\parindent}
 
 \usepackage[nonumberlist]{glossaries}
 \setacronymstyle{long-short}
@@ -28,57 +38,132 @@
 \usepackage{amsmath,amssymb} % For including math equations, theorems, symbols, etc
 \usepackage{varioref} % More descriptive referencing
 
-%\acmVolume{VV}
-%\acmNumber{N}
-%\acmYear{YYYY}
-%\acmMonth{Month}
-%\acmArticleNum{XXX}
-%\acmdoi{10.1145/XXXXXXX.YYYYYYY}
+% Copyright
+%\setcopyright{acmcopyright}
+%\setcopyright{acmlicensed}
+%\setcopyright{rightsretained}
+%\setcopyright{usgov}
+%\setcopyright{usgovmixed}
+%\setcopyright{cagov}
+%\setcopyright{cagovmixed}
 
-
+% Document starts
 \begin{document}
 
-\markboth{V. F. Pamplona et al.}{Photorealistic Models for Pupil Light Reflex and Iridal Pattern Deformation}
+% Page heads
+\markboth{L. Crestel et P.Esling}{A Conditional model for orchestral Inference}
 
-\title{A conditional model for automatic orchestration\\Application to a real-time Live Orchestral Piano} % title
-\author{Philippe Esling and Léopold Crestel}
+% Title portion
+\title{A conditional model for automatic orchestration\\Application to a real-time Live Orchestral Piano}
+\author{LEOPOLD CRESTEL
+\affil{Institut de Recherche et Coordination Acoustique/Musique}
+PHILIPPE ESLING
+\affil{Institut de Recherche et Coordination Acoustique/Musique}
+}
+% NOTE! Affiliations placed here should be for the institution where the
+%       BULK of the research was done. If the author has gone to a new
+%       institution, before publication, the (above) affiliation should NOT be changed.
+%       The authors 'current' address may be given in the "Author's addresses:" block (below).
+%       So for example, Mr. Abdelzaher, the bulk of the research was done at UIUC, and he is
+%       currently affiliated with NASA.
+
+\begin{abstract}
+Multifrequency media access control has been well understood in
+general wireless ad hoc networks, while in wireless sensor networks,
+researchers still focus on single frequency solutions. In wireless
+sensor networks, each device is typically equipped with a single
+radio transceiver and applications adopt much smaller packet sizes
+compared to those in general wireless ad hoc networks. Hence, the
+multifrequency MAC protocols proposed for general wireless ad hoc
+networks are not suitable for wireless sensor network applications,
+which we further demonstrate through our simulation experiments. In
+this article, we propose MMSN, which takes advantage of
+multifrequency availability while, at the same time, takes into
+consideration the restrictions of wireless sensor networks. Through
+extensive experiments, MMSN exhibits the prominent ability to utilize
+parallel transmissions among neighboring nodes. When multiple physical
+frequencies are available, it also achieves increased energy
+efficiency, demonstrating the ability to work against radio
+interference and the tolerance to a wide range of measured time
+synchronization errors.
+\end{abstract}
+
+% We no longer use \terms command
+%\terms{Design, Algorithms, Performance}
+
+\keywords{Automatic orchestration, Real-time, Conditional Restricted Boltzmann Machine, time modeling}
+
+\acmformat{Léopold Crestel, Philippe Esling, 2010. A conditional model for automatic orchestration\\Application to a real-time Live Orchestral Piano.}
+% At a minimum you need to supply the author names, year and a title.
+% IMPORTANT:
+% Full first names whenever they are known, surname last, followed by a period.
+% In the case of two authors, 'and' is placed between them.
+% In the case of three or more authors, the serial comma is used, that is, all author names
+% except the last one but including the penultimate author's name are followed by a comma,
+% and then 'and' is placed before the final author's name.
+% If only first and middle initials are known, then each initial
+% is followed by a period and they are separated by a space.
+% The remaining information (journal title, volume, article number, date, etc.) is 'auto-generated'.
+
+\begin{bottomstuff}
+This work is supported by the National Science Foundation, under
+grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
+
+Author's addresses: L. Crestel and P.Esling, Représentation Musicales,
+Institut de Recherche et Coordination Acoustique/Musique; 
+\end{bottomstuff}
 
 \maketitle
 
-\begin{abstract}
-
-\end{abstract}
-
 \section{Introduction}
 % Orchestration classique
+\begin{figure}
+\centering
+\includegraphics[scale=0.2]{orch}
+\label{fig:}
+\caption{\textit{Projective orchestration}. A piano score is extended (projected) on an orchestra. For one piano score, many acceptable orchestration exist. Our hypothesis is that a piano score is strongly correlated to any of the orchestration that could be produced from this piece.}
+\end{figure}
 \textit{Musical orchestration} is the subtle art of of writing musical pieces for orchestra, by combining the spectral properties specific to each instrument in order to achieve a particular sonic goal. This complex discipline involves a wide set of intricate mechanisms, most of which have not yet been satisfactorily theorized. Indeed, famous composers often conjectured that orchestration would mainly remain an empirical discipline, which could only be learned through experience and never axiomatized in books. Even if several famous musicians have written orchestration treatises \cite{berlioz_orch,koechli_orch}, those mostly remain recommendations and sets of existing orchestration examples from which one can draw inspiration.
-We focus more specifically in this work on \textit{projective} orchestration, which is the transformation from a piano score to an orchestral piece. Many composers have worked in a projective manner, and a large amount of example can be found in the repertoire. For instance, one of the most famous is the orchestration of \textit{Les tableaux d'une exposition}, a Modest Moussorgsky piano piece, by Maurice Ravel.
+We focus more specifically in this work on \textit{projective} orchestration, which is the transformation from a piano score to an orchestral piece. Many composers have worked in a projective manner, and a large amount of example can be found in the repertoire. For instance, one of the most famous is the orchestration of \textit{Les tableaux d'une exposition}, a Modest Moussorgsky's piano piece, by Maurice Ravel.
 
 % Automatic orch, state of the art
 The objective in this work is to be able to automatically perform in real-time the \textit{projective} orchestration of a piano performance.
-More specifically, such a system rely on the task of inferring an orchestration (output of our system) from a piano score (input).
-The vast combinatorial set of instrument possibilities added to the complex temporal structure of polyphonic music make this problem a particularly daunting task. Several attempts to build an automatic orchestration system can be found in the literature. Orchestration can be viewed as assigning the different notes of the piano score to a certain number of instrument according to constraints over the number of instruments, their tessitura, a certain voice leading inside an instrument. Interpreting  orchestration as a Constraint Solving Problem (CSP) lead to a first solution \cite{Truchet2011Constraint-Prog}. However, as Steven McAdams pointed it out, timbre is "a structuring force in music" \cite{mcadams2013timbre} in the sense that it should be used to emphasize the already existing movements of the original piano piece. We believe that a system only built only on symbolic constraint will undoubtedly fail at grasping this underlying structure. Hence, orchestrating first require to understand the harmonic, rhythmic and melodic structure of the original piano piece.
+More specifically, our system takes in input a piano score and outputs an orchestral score.
+The vast combinatorial set of instrument possibilities added to the complex temporal structure of polyphonic music make this problem a particularly daunting task. Several attempts to build an automatic orchestration system can be found in the literature. Orchestration can be viewed as assigning the different notes of the piano score to a certain number of instrument according to constraints over the number of instruments, their tessitura, a certain voice leading inside an instrument. Interpreting orchestration as a Constraint Solving Problem (CSP) lead to a first solution \cite{Truchet2011Constraint-Prog}. However, as Steven McAdams pointed it out, timbre is "a structuring force in music" \cite{mcadams2013timbre} in the sense that it should be used to emphasize the already existing movements of the original piano piece. We believe that a system only built only on symbolic constraint will undoubtedly fail at grasping this underlying structure. Hence, orchestrating first require to understand the harmonic, rhythmic and melodic structure of the original piano piece.
 \textit{Orchids} (\cite{Esling2010}) is an other interesting work set in an other paradigm called \textit{injective} orchestration. It consists in trying to reconstruct a target timbre for a small temporal frame. The major drawback being that the orchestration is limited to short (less than 10 seconds) examples.
 % Why statistical inference ?
-In order to build an automatic orchestration system being able to work on a macro-temporal timescale while structuring the musical discourse, statistical inference appeared us as a promising solution. Their should indeed exist strong correlation between the information contained in the original piano score and the orchestral rendering we want to produce. Statistical inference would allow us to extract the knowledge and rules underlying in the many orchestration proposed by famous composers over the years.
+In order to build an automatic orchestration system being able to work on a macro-temporal timescale while structuring the musical discourse, statistical inference appeared us to be a promising solution. Their should indeed exist strong correlation between the information contained in the original piano score and the orchestral rendering we want to produce. Statistical inference would allow us to extract the knowledge and rules embodied in the many orchestration proposed by famous composers over the years.
 
-% What model and why ?
-We decided to work with a set of models called conditional models \cite{taylor2009composable}, which derive from a particular type of Markov Random Field called the Restricted Boltzmann Machine (RBM) \cite{fischer2014training}. While being able to model complex distribution through a multi-layer architecture of latent units, those models implement a notion of context which is interesting in our case in order to model the influence of the past over the present and of the piano over the orchestra.
-Those models are generative which is a requirement in our case. In conditional models, it means that once trained on a dataset, an input vector can be recreated given a certain context. This is through this mechanism that orchestral inference can be performed.
-% Data representation
-To model sequences of symbolic music, the pianoroll representation is often used. A pianoroll is a matrix whose rows and columns are a discretisation of pitch and time \prettyref{fig:pianoroll}. Note that this discretisation flows naturally from the scores notation in western since notes are aligned on a discrete pitch scale and rhythmically on the beat. The pitch $p$ being played at time $t$  is then represented in the pianoroll representation by $Pianoroll(p,t) = 1$, $0$ meaning that no note is played . The dynamics are ignored and each time frame is a binary vector that indicates either a pitch is on or off.
-\label{sec:orchestral_vect_def}
-This representation, usually defined for a single polyphonic instrument can easily be extended to an orchestra composed by N instruments by simply concatenating the pianoroll of each instrument. Note that we respect the usual simplifications used when writing orchestral scores which consists in grouping all the instruments of a same section (e.g. violin 1) as a unique instrument.
+% Which model and why ?
+We decided to work with a class of models called conditional models \cite{taylor2009composable}, which derive from a particular type of Markov Random Field called the Restricted Boltzmann Machine (RBM) \cite{fischer2014training}. While being able to model complex distributions through latent units, those models implement a notion of context which is interesting in our case in order to model the influence of the past over the present and of the piano over the orchestra.
+Those models are generative which is a requirement in our case. If correctly trained on a training dataset, a model then has the ability to generate data that are similar, yet unseen, to those contained in the training set. This is through this mechanism that orchestral inference can be performed.
 
 % Evaluation framework
-We propose in this article a new evaluation framework for the orchestral inference task in order to evaluate the different model we proposed. Building a quantitative evaluation framework for generative models is rarely straightforward, especially since computing the likelihood of a test sample is intractable in the model we used. Hence, we rely on a frame-level accuracy measure to compare the orchestration proposed by our model with a \textit{reference} orchestration.
+We propose in this article a new evaluation framework for the orchestral inference task in order to evaluate the different model we proposed. Building a quantitative evaluation framework for generative models is rarely straightforward, especially since computing the likelihood of a test sample is intractable in the model we used. A common practice is to define an auxiliary task. Hence, we rely on a frame-level predictive task based on an accuracy measure which basically consists in comparing, for a given piano score, the orchestration proposed by our model and an orchestration written by a composer.
 % Results -> LOP
 The results of the proposed model are then presented. We picked out the best model and included it in a real-time orchestration system called \textit{LOP}.
 
-This paper is organized as follows. In sections 2, 3 and 4 we introduce  the RBM, the CRBM and the FGCRBM architectures. The orchestration inference task is presented in the section 5 along with an evaluation framework based on a frame-level accuracy measure. The previously introduced models are then evaluated in this framework and the results displayed. The section 7 introduces a real-time \textit{projective} orchestration system using the presented architectures.
+This paper is organized as follows. In sections 2 we introduce the state of the art in conditional models through three well known models: the RBM, the CRBM and the FGCRBM. The orchestration inference task is presented in the section 3 along with an evaluation framework based on a frame-level accuracy measure. The previously introduced models are then evaluated in this framework and the results displayed. The section 4 introduces a real-time \textit{projective} orchestration system using the presented architectures.
 
 \section{State of the art}
+\subsection{Data representation}
+\begin{figure}
+\centering
+\includegraphics[scale=0.15]{representation_donnes}
+\caption{\textit{Data representation for a single piano}. The pianoroll is a representation of musical events, discrete on both frequency scale (pitch) and the time scale (frames). A pitch $p$ at time $t$ can be either on or off, which is represented by a one or a zero on the pianoroll. To represent an orchestra, the pianorolls of each instruments are simply concatenated along the pitch dimension.}
+\label{fig:pianoroll}
+\end{figure}
+To model sequences of symbolic music, the pianoroll representation is often used. A pianoroll is a matrix whose rows and columns are a discretisation of pitch and time \prettyref{fig:pianoroll}. Note that this discretisation flows naturally from the scores notation in western music since notes are aligned on a discrete pitch scale and rhythmically on the beat. The pitch $p$ being played at time $t$  is then represented in the pianoroll representation by $Pianoroll(p,t) = 1$, $Pianoroll(p,t) = 0$ meaning that pitch $p$ is not played at time $t$. The dynamics are ignored and each time frame is a binary vector that indicates either a pitch is on or off.
+\label{sec:orchestral_vect_def}
+This representation, usually defined for a single polyphonic instrument can easily be extended to an orchestra composed by N instruments by simply concatenating the pianoroll of each instrument over the pitch dimension. Note that we respect the usual simplifications used when writing orchestral scores which consists in grouping all the instruments of a same section. For instance, the section \textit{violin 1}, composed by many instrumentalists (about 10), is represented as a unique instrument.
+
 \subsection{Restricted-Boltzmann Machine}
+\begin{figure}
+\centering
+\includegraphics[scale=0.7]{RBM}
+\caption{\textit{Restricted Boltzmann Machine}. The RBM is an energy-based model. Its energy function is computed from the values of weights that link nodes. Training an RBM consists in lowering the energy function around the example from a training set. Inference in this model is easy to perform since the hidden (resp. visible) units are independent from each others.}
+\label{fig:RBM}
+\end{figure}
 A \gls{RBM} \cite{Hinton:2006:FLA:1161603.1161605} is an energy-based model that represent the joint distribution of a visible vector $\textbf{v} = (v_{1},...,v_{m})$ and a hidden vector $\textbf{h} = (h_{1},...,h_{n})$. This distribution is given by $p(v,h) = \frac{\exp^{-E(v,h)}}{Z}$ where
 \begin{equation}
 E(\textbf{v},\textbf{h}) = - \sum_{i=1}^{m} a_{i} v_{i} - \sum_{j = 1}^{n} b_{j} h_{j} - \sum_{i=1}^{m} \sum_{j=1}^{n} v_{i} W_{ij} h_{j}
@@ -100,6 +185,11 @@ where $sigm$ is the sigmoid function.
 It has been proved that the samples we obtain after an infinite number of iteration will be drawn from the joint distribution of the visible and hidden units of our model. An other approximation consists in starting the Gibbs chain from the sample $v^{(l)}$, which increases the convergence of the chain, and to limit the number of alternate sampling steps to a fixed number K, which leads to the CD-K algorithm used to train a \gls{RBM}.
 
 \subsection{Conditional RBM}
+\begin{figure}
+\centering
+\includegraphics[scale=0.3]{CRBM_orchestration}
+\caption{\textit{Conditional RBM}. A layer of context units is added to the standard RBM architectures. Those context units linearly modify the bias of both visible and hidden units.}
+\end{figure}
 The \gls{CRBM} model (\cite{taylor2009composable}) is a standard \gls{RBM} in which a dynamic biases conditioned is added to the visible and hidden units. The dynamic bias linearly depends of context units $\bm{x}$.
 To model time series, if we consider that the visible units represent the current time frame, those context units can be defined as the concatenation of the N last time frames. We call this vector $\bm{v}_{k<t} = \left( v_{1}^{(t-N)} , ... , v_{m}^{(t-N)}, ... , v_{1}^{(t)} ... , v_{m}^{(t)} \right)$, where N denotes the order of the model.
 The energy function of the Conditional RBM is given by (\prettyref{eq:energy_CRBM})
@@ -108,9 +198,17 @@ The energy function of the Conditional RBM is given by (\prettyref{eq:energy_CRB
 E(v_{t},h_{t}|v_{<t}) = - \sum_{i} \hat{a}_{i,t}v_{i,t} - \sum_{ij}W_{ij}v_{i,t}h_{j,t} - \sum_{j} \hat{b}_{j,t}h_{j,t} 
 \end{equation}
 where the biases are defined by $\hat{a}_{i} = a_{i} + \sum_{k}A_{ki}v_{k,<t}$ and $\hat{b}_{j} = b_{j} + \sum_{k}B_{kj}v_{k,<t}$.
+
+If we consider that the visible units represent the orchestral vector for the time frame $t$, conditional units can be used to model the influence of the past orchestral vector $t-1 , ... , t-N$ (the concatenation of those N orchestral frames are then referred to as past orchestral vector) and the (strong) influence of the piano frame at time $t$ over the visible units.
+In the CRBM model, the conditional units are the concatenation of the past orchestral vector and the current piano vector.
+
 This model appeared as an interesting solution in order to model the strong temporal relations underlying in symbolic music data. It can be trained by contrastive divergence, since the marginal probability of visible and hidden units can be easily obtained from the energy distribution.
 
 \subsection{Factored Gated Conditional RBM}
+\begin{figure}
+\centering
+\includegraphics[scale=0.25]{FGCRBM_orchestration}
+\end{figure}
 The Factored Gated Conditional RBM model \cite{taylor2009factored} proposes to extend the Conditional RBM model by adding a layer of feature unit $z_{l}$ which modulate the weights of the conditional architecture in a multiplicative way. Hence, the weights of the networks become $\Theta = \left\lbrace W_{ijl} , A_{ikl} , B_{jkl} , \hat{a}_{i} , \hat{b}_{j} \right\rbrace$. This multiplicative influence can be understood as a modification of the energy landscape of the model. Since the number of parameter to train becomes high, the 3 dimensional tensors can be factorized into a product of three matrices by including factors $W_{ijl} = W_{if} . W_{jf} . W_{lf}$.
 The energy function of this Factored Gated Conditional RBM is then given by
 \begin{equation}
@@ -125,20 +223,62 @@ where the dynamic biases of the visible and hidden units are defined by
 \hat{b}_{j,t} = b_{j} + \sum_{n} \sum_{kl}B_{jn}^{h}B_{kn}^{v<t}B_{ln}^{z}v_{k,<t}z_{l,t}
 \end{equation}
 
+The FGCRBM offers the possibility to distinguish between the influence of the current piano vector and the past orchestral vectors by assigning the first one to the features units $z_{l}$ and the second to the context units $x_{k}$.
+
 \subsection{Generative models}
+\begin{figure}
+\centering
+\includegraphics[scale=0.3]{FGCRBM_sampling}
+\caption{\textit{Sampling in a FGCRBM}. Context and Features units are respectively clamped to the last ($t-1$ to $t-N$) orchestral frames and the current ($t$) piano frame. Hidden units are randomly initialized. Then, several Gibbs sampling step are performed, typically 50.}
+\label{fig:FGCRBM_sampling}
+\end{figure}
 %% Role des unités conditionelles et tout le tralala dans les modèles
 The previously introduced models are generative models. After the training phase, the distribution represented by the networks is supposed to be close to the underlying distribution of the data. It is then possible to sample from this distribution to reproduce data that are alike the data of the training set.
-Conditional models allow to impose a certain context, which enables to generate sequences of data under a certain context. We remind that our objective is to transform a sequence of binary vectors drawn from a piano score (refered to as piano vectors) into a sequence of orchestral vectors (\prettyref{sec:orchestral_vect_def}). (SCH2MA)
-If we consider that the visible units represent the orchestral vector for the time frame $t$, conditional units can be used to model the influence of the past orchestral vector $t-1 , ... , t-N$ (the concatenation of those N orchestral frames are then referred to as past orchestral vector) and the (strong) influence of the piano frame at time $t$ over the visible units.
-In the CRBM model, the conditional units are the concatenation of the past orchestral vector and the current piano vector. The FGCRBM offer the possibility to distinguish between the influence of the current piano vector and the past orchestral vectors by assigning the first one to the features units $z_{l}$ and the second to the context units $x_{k}$.
+Conditional models allow to impose a certain context, which enables to generate sequences of data under a certain context. We remind that our objective is to transform a sequence of binary vectors drawn from a piano score (referred to as piano vectors) into a sequence of orchestral vectors (\prettyref{sec:orchestral_vect_def}).
 
-\section{Orchestration inference}
-An orchestration inference task is introduced in this section, along with an evaluation framework and the performances of our model in this framework. The evaluation is a frame-level prediction task that rely on an accuracy measure.
+Knowing the current piano frame and the recent past orchestral frames, the generation process in a conditional model can be described as follow. After randomly setting the hidden units, a certain number (typically 50) of Gibbs sampling steps are performed in order to reach the equilibrium distribution of the model. This process is described for the FGCRBM model in \prettyref{fig:FGCRBM_sampling}.
+This task correspond exactly to the projection of the piano 
+
+\section{Projective orchestration}
+A projective orchestration task is introduced in this section, along with an evaluation framework and the performances of our model in this framework. The evaluation is a frame-level prediction task that rely on an accuracy measure.
 
 \subsection{Formalization}
+Automatic orchestration suffers from the lack of quantitative evaluation. The different work on the domain mainly rely on qualitative evaluation \cite{handelman2012automatic}. To our best knowledge, there has not been any attempt in the automatic orchestration field to define a task associated to a performance measure. We propose here a first attempt in order to fill this gap by defining the orchestration prediction task.
+
+An orchestral pianoroll is defined by the concatenation of the instrumental pianoroll
+\begin{equation}
+Orch = 
+\begin{bmatrix}
+Instrument \ 1 \\
+Instrument \ 2\\
+\vdots\\
+Instrument \ N\\
+\end{bmatrix}
+\end{equation}
+For a sequence of music of length $T$ and with $N$ instruments, $Orch$ is then a matrix of dimension $T \times N.88$. 
+Indeed, we reduce the number of possible pitch to those of a grand piano (88 pitch from ). One can argue that the ambitus of a piccolo for instance goes higher than the highest note of a piano in frequency. This is note the case in symbolic notation, since the score of the piccolo is systematically written several octaves under its real tessitura. In our framework we chose 14 instruments indexed by :
+
+\begin{tabular}{l l l l l}
+1. Violin & & 6. Timpani & & 11. Oboe\\
+2. Viola & & 7. Trumpet & & 12. Bassoon\\
+3. Cello & & 8. Trombone & & 13. Clarinet\\
+4. Double-bass & & 9. Tuba & & 14.Flute\\
+5. Harp & & 10. French horn &\\
+\end{tabular}
+
 \subsection{Evaluation}
+To evaluate the performance of our system
 \subsubsection{Frame-level accuracy}
 % Probleme que pas qu'une orch par piano score, Mais ca permet quand même d'avoir une idée.
+At each time, two frames can be compared thanks to an accuracy measure,
+For evaluating accuracy, previous studies relied on the expected frame-level accuracy \cite{boulanger2012modeling,DBLP:journals/corr/LiuR14a}, defined by the formula
+\begin{equation}
+\text{Accuracy}  = \frac{TP(t)}{TP(t) + FP(t) + FN(t)}
+\end{equation}
+where $TP(t)$ is the number of notes correctly predicted (true positives). $FP(t)$ is the number of notes predicted which are not in the original sequence (false positive) and $FN(t)$ is the number on unreported notes (false negative). 
+
+Instead of binary values, activation probabilities are used for the predicted samples in order to reduce the sampling noise. If this probability is intractable, one should sample many predicted frames for a single time and compute the mean value of those samples.
+
 \subsubsection{Event-level accuracy}
 
 \subsection{Database}
@@ -153,13 +293,100 @@ For each instrument, the pitch range is reduced to the tessitura observed in the
 
 \section{Conclusion and future works}
 
+% Start of "Sample References" section
+
+\section{Typical references in new ACM Reference Format}
+A paginated journal article \cite{Abril07}, an enumerated
+journal article \cite{Cohen07}, a reference to an entire issue \cite{JCohen96},
+a monograph (whole book) \cite{Kosiur01}, a monograph/whole book in a series (see 2a in spec. document)
+\cite{Harel79}, a divisible-book such as an anthology or compilation \cite{Editor00}
+followed by the same example, however we only output the series if the volume number is given
+\cite{Editor00a} (so Editor00a's series should NOT be present since it has no vol. no.),
+a chapter in a divisible book \cite{Spector90}, a chapter in a divisible book
+in a series \cite{Douglass98}, a multi-volume work as book \cite{Knuth97},
+an article in a proceedings (of a conference, symposium, workshop for example)
+(paginated proceedings article) \cite{Andler79}, a proceedings article
+with all possible elements \cite{Smith10}, an example of an enumerated
+proceedings article \cite{VanGundy07},
+an informally published work \cite{Harel78}, a doctoral dissertation \cite{Clarkson85},
+a master's thesis: \cite{anisi03}, an online document / world wide web resource \cite{Thornburg01}, \cite{Ablamowicz07},
+\cite{Poker06}, a video game (Case 1) \cite{Obama08} and (Case 2) \cite{Novak03}
+and \cite{Lee05} and (Case 3) a patent \cite{JoeScientist001},
+work accepted for publication \cite{rous08}, 'YYYYb'-test for prolific author
+\cite{SaeediMEJ10} and \cite{SaeediJETC10}. Other cites might contain
+'duplicate' DOI and URLs (some SIAM articles) \cite{Kirschmer:2010:AEI:1958016.1958018}.
+Boris / Barbara Beeton: multi-volume works as books
+\cite{MR781536} and \cite{MR781537}.
+
+% Appendix
+\appendix
+\section*{APPENDIX}
+\setcounter{section}{1}
+In this appendix, we measure
+the channel switching time of Micaz [CROSSBOW] sensor devices.
+In our experiments, one mote alternatingly switches between Channels
+11 and 12. Every time after the node switches to a channel, it sends
+out a packet immediately and then changes to a new channel as soon
+as the transmission is finished. We measure the
+number of packets the test mote can send in 10 seconds, denoted as
+$N_{1}$. In contrast, we also measure the same value of the test
+mote without switching channels, denoted as $N_{2}$. We calculate
+the channel-switching time $s$ as
+\begin{eqnarray}%
+s=\frac{10}{N_{1}}-\frac{10}{N_{2}}. \nonumber
+\end{eqnarray}%
+By repeating the experiments 100 times, we get the average
+channel-switching time of Micaz motes: 24.3$\mu$s.
+
+\appendixhead{ZHOU}
+
+% Acknowledgments
+\begin{acks}
+The authors would like to thank Dr. Maura Turolla of Telecom
+Italia for providing specifications about the application scenario.
+\end{acks}
+
 % Bibliography
-\bibliographystyle{alpha}
+\bibliographystyle{ACM-Reference-Format-Journals}
 \bibliography{../../biblio}
-                                % Sample .bib file with references that match those in
-                                % the 'Specifications Document (V1.5)' as well containing
-                                % 'legacy' bibs and bibs with 'alternate codings'.
-                                % Gerry Murray - March 2012
+                             % Sample .bib file with references that match those in
+                             % the 'Specifications Document (V1.5)' as well containing
+                             % 'legacy' bibs and bibs with 'alternate codings'.
+                             % Gerry Murray - March 2012
+
+% History dates
+\received{February 2007}{March 2009}{June 2009}
+
+% Electronic Appendix
+\elecappendix
+
+\medskip
+
+\section{This is an example of Appendix section head}
+
+Channel-switching time is measured as the time length it takes for
+motes to successfully switch from one channel to another. This
+parameter impacts the maximum network throughput, because motes
+cannot receive or send any packet during this period of time, and it
+also affects the efficiency of toggle snooping in MMSN, where motes
+need to sense through channels rapidly.
+
+By repeating experiments 100 times, we get the average
+channel-switching time of Micaz motes: 24.3 $\mu$s. We then conduct
+the same experiments with different Micaz motes, as well as
+experiments with the transmitter switching from Channel 11 to other
+channels. In both scenarios, the channel-switching time does not have
+obvious changes. (In our experiments, all values are in the range of
+23.6 $\mu$s to 24.9 $\mu$s.)
+
+\section{Appendix section head}
+
+The primary consumer of energy in WSNs is idle listening. The key to
+reduce idle listening is executing low duty-cycle on nodes. Two
+primary approaches are considered in controlling duty-cycles in the
+MAC layer.
 
 \end{document}
-% End of v2-acmtog-sample.tex (March 2012) - Gerry Murray, ACM
+% End of v2-acmsmall-sample.tex (March 2012) - Gerry Murray, ACM
+
+
