--- a/Notes_leo/biblio.bib
+++ b/Notes_leo/biblio.bib
@@ -2,12 +2,41 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Léopold Crestel at 2015-09-15 00:33:33 +0200 
+%% Created for Léopold Crestel at 2015-09-23 10:18:17 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bromley1993signature,
+	Author = {Bromley, Jane and Bentz, James W and Bottou, L{\'e}on and Guyon, Isabelle and LeCun, Yann and Moore, Cliff and S{\"a}ckinger, Eduard and Shah, Roopak},
+	Date-Added = {2015-09-21 09:33:43 +0000},
+	Date-Modified = {2015-09-21 09:33:43 +0000},
+	Journal = {International Journal of Pattern Recognition and Artificial Intelligence},
+	Number = {04},
+	Pages = {669--688},
+	Publisher = {World Scientific},
+	Title = {Signature verification using a ``Siamese'' time delay neural network},
+	Volume = {7},
+	Year = {1993}}
+
+@inproceedings{mikolov2013distributed,
+	Author = {Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+	Booktitle = {Advances in neural information processing systems},
+	Date-Added = {2015-09-21 07:50:05 +0000},
+	Date-Modified = {2015-09-21 07:50:05 +0000},
+	Pages = {3111--3119},
+	Title = {Distributed representations of words and phrases and their compositionality},
+	Year = {2013}}
+
+@article{mikolov2013efficient,
+	Author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+	Date-Added = {2015-09-21 07:49:35 +0000},
+	Date-Modified = {2015-09-21 07:49:35 +0000},
+	Journal = {arXiv preprint arXiv:1301.3781},
+	Title = {Efficient estimation of word representations in vector space},
+	Year = {2013}}
 
 @article{hinton2002training,
 	Author = {Hinton, Geoffrey E},
