Update article ACM - LOP
Corrections essentiellement

--- a/Notes_leo/Main/Ideas.tex
+++ b/Notes_leo/Main/Ideas.tex
@@ -82,4 +82,10 @@ A fader is associated to each dimensions of our "projection" space (space define
 \item How to deal with continuity of orchestration ? A lead could be to define Siamese network for past frames and force recent past to be close to the actual frame in the projection space.
 \end{itemize}
 
+\subsection{Application}
+\begin{itemize}
+\item Generating orchestration
+\item audio to score. Plus it gives a good evaluation framework.
+\end{itemize}
+
 \end{document}
