--- a/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
+++ b/Notes_leo/LOP/Article_ACM/LOP_article_ACM.tex
@@ -37,6 +37,7 @@
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
 \usepackage{amsmath,amssymb} % For including math equations, theorems, symbols, etc
 \usepackage{varioref} % More descriptive referencing
+\allowdisplaybreaks
 
 % Copyright
 %\setcopyright{acmcopyright}
@@ -120,33 +121,35 @@ Institut de Recherche et Coordination Acoustique/Musique;
 \begin{figure}
 \centering
 \includegraphics[scale=0.2]{orch}
-\label{fig:}
+\label{fig:orch}
 \caption{\textit{Projective orchestration}. A piano score is extended (projected) on an orchestra. For one piano score, many acceptable orchestration exist. Our hypothesis is that a piano score is strongly correlated to any of the orchestration that could be produced from this piece.}
 \end{figure}
-\textit{Musical orchestration} is the subtle art of of writing musical pieces for orchestra, by combining the spectral properties specific to each instrument in order to achieve a particular sonic goal. This complex discipline involves a wide set of intricate mechanisms, most of which have not yet been satisfactorily theorized. Indeed, famous composers often conjectured that orchestration would mainly remain an empirical discipline, which could only be learned through experience and never axiomatized in books. Even if several famous musicians have written orchestration treatises \cite{berlioz_orch,koechli_orch}, those mostly remain recommendations and sets of existing orchestration examples from which one can draw inspiration.
-We focus more specifically in this work on \textit{projective} orchestration, which is the transformation from a piano score to an orchestral piece. Many composers have worked in a projective manner, and a large amount of example can be found in the repertoire. For instance, one of the most famous is the orchestration of \textit{Les tableaux d'une exposition}, a Modest Moussorgsky's piano piece, by Maurice Ravel.
+\textit{Musical orchestration} is the subtle art of writing musical pieces for orchestra, by combining the spectral properties specific to each instrument in order to achieve a particular sonic goal. This complex discipline involves a wide set of intricate mechanisms, most of which have not yet been satisfactorily theorized. Indeed, famous composers often conjectured that orchestration would mainly remain an empirical discipline, which could only be learned through experience and never axiomatized in books. Even if several famous musicians have written orchestration treatises \cite{berlioz_orch,koechli_orch}, those mostly remain recommendations and sets of existing orchestration examples from which one can draw inspiration.
+We focus more specifically in this work on \textit{projective} orchestration, which is the transformation from a piano score to an orchestral piece \prettyref{fig:orch}. Many composers have worked in a projective manner, and a large amount of examples can be found in the repertoire. For instance, one of the most famous is the orchestration of \textit{Les tableaux d'une exposition}, a Modest Moussorgsky's piano piece, by Maurice Ravel.
 
 % Automatic orch, state of the art
 The objective in this work is to be able to automatically perform in real-time the \textit{projective} orchestration of a piano performance.
 More specifically, our system takes in input a piano score and outputs an orchestral score.
-The vast combinatorial set of instrument possibilities added to the complex temporal structure of polyphonic music make this problem a particularly daunting task. Several attempts to build an automatic orchestration system can be found in the literature. Orchestration can be viewed as assigning the different notes of the piano score to a certain number of instrument according to constraints over the number of instruments, their tessitura, a certain voice leading inside an instrument. Interpreting orchestration as a Constraint Solving Problem (CSP) lead to a first solution \cite{Truchet2011Constraint-Prog}. However, as Steven McAdams pointed it out, timbre is "a structuring force in music" \cite{mcadams2013timbre} in the sense that it should be used to emphasize the already existing movements of the original piano piece. We believe that a system only built only on symbolic constraint will undoubtedly fail at grasping this underlying structure. Hence, orchestrating first require to understand the harmonic, rhythmic and melodic structure of the original piano piece.
-\textit{Orchids} (\cite{Esling2010}) is an other interesting work set in an other paradigm called \textit{injective} orchestration. It consists in trying to reconstruct a target timbre for a small temporal frame. The major drawback being that the orchestration is limited to short (less than 10 seconds) examples.
+The vast combinatorial set of instrument possibilities added to the complex temporal structure of polyphonic music make this problem a particularly daunting task. Several attempts to build an automatic orchestration system can be found in the literature. 
+
+Orchestration can be viewed as assigning the different notes of the piano score to a certain number of instrument according to constraints over the number of instruments, their tessitura or a certain voice leading. Interpreting orchestration as a Constraint Solving Problem (CSP) lead to a first solution \cite{Truchet2011Constraint-Prog}. However, as Steven McAdams pointed it out, timbre is "a structuring force in music" \cite{mcadams2013timbre} in the sense that it should be used to emphasize the already existing structure of the original piano piece. We believe that a system built only on symbolic constraint will undoubtedly fail at grasping the harmonic, rhythmic and melodic structure of the original piano piece and thus propose an interesting orchestration.
+\textit{Orchids} (\cite{Esling2010}) is an other interesting work set in an other paradigm called \textit{injective} orchestration. It consists in trying to reconstruct a target timbre for a small temporal frame. Its major drawback is that \textit{Orchids} can only orchestrate short frames (less than 10 seconds).
 % Why statistical inference ?
-In order to build an automatic orchestration system being able to work on a macro-temporal timescale while structuring the musical discourse, statistical inference appeared us to be a promising solution. Their should indeed exist strong correlation between the information contained in the original piano score and the orchestral rendering we want to produce. Statistical inference would allow us to extract the knowledge and rules embodied in the many orchestration proposed by famous composers over the years.
+In order to build an automatic orchestration system being able to work on a macro-temporal timescale while structuring the musical discourse, statistical inference appeared us to be a promising solution. Their should indeed exist strong correlation between the information contained in the original piano score and the orchestral rendering we want to produce. Statistical inference would allow us to extract rules from the vast knowledge embodied in the many orchestration proposed by famous composers over the years.
 
 % Which model and why ?
-We decided to work with a class of models called conditional models \cite{taylor2009composable}, which derive from a particular type of Markov Random Field called the Restricted Boltzmann Machine (RBM) \cite{fischer2014training}. While being able to model complex distributions through latent units, those models implement a notion of context which is interesting in our case in order to model the influence of the past over the present and of the piano over the orchestra.
-Those models are generative which is a requirement in our case. If correctly trained on a training dataset, a model then has the ability to generate data that are similar, yet unseen, to those contained in the training set. This is through this mechanism that orchestral inference can be performed.
+We decided to work with a class of models called conditional models \cite{taylor2009composable}, which derive from a particular type of Markov Random Field called the Restricted Boltzmann Machine (RBM) \cite{fischer2014training}. While being able to model complex distributions through latent units, those models implement a notion of context which allow us to model the influence of the past over the present and of the piano over the orchestra.
+Those models are generative which is a requirement in our case. If correctly trained on a training dataset, a model then has the ability to generate data that are similar, yet unseen, to those contained in the training set. This is through this mechanism that orchestral projection can be performed.
 
 % Evaluation framework
-We propose in this article a new evaluation framework for the orchestral inference task in order to evaluate the different model we proposed. Building a quantitative evaluation framework for generative models is rarely straightforward, especially since computing the likelihood of a test sample is intractable in the model we used. A common practice is to define an auxiliary task. Hence, we rely on a frame-level predictive task based on an accuracy measure which basically consists in comparing, for a given piano score, the orchestration proposed by our model and an orchestration written by a composer.
+We then propose in this article a new evaluation framework for the orchestral projection task in order to evaluate the different model previously introduced.  This evaluation rely on a frame-level predictive task based on an accuracy measure.
 % Results -> LOP
 The results of the proposed model are then presented. We picked out the best model and included it in a real-time orchestration system called \textit{LOP}.
 
-This paper is organized as follows. In sections 2 we introduce the state of the art in conditional models through three well known models: the RBM, the CRBM and the FGCRBM. The orchestration inference task is presented in the section 3 along with an evaluation framework based on a frame-level accuracy measure. The previously introduced models are then evaluated in this framework and the results displayed. The section 4 introduces a real-time \textit{projective} orchestration system using the presented architectures.
+This paper is organized as follows. In sections 2 we introduce the state of the art in conditional models through three well known models: the RBM, the CRBM and the FGCRBM. The orchestration projection task is presented in the section 3 along with an evaluation framework based on a frame-level accuracy measure. The previously introduced models are then evaluated in this framework and the results displayed. The section 4 introduces a real-time \textit{projective} orchestration system using the presented architectures.
 
 \section{State of the art}
-The three model we have used in our work derive from the Graphical Probabilistic Model (GPM, \cite{fischer2014training}) theory. The RBM, CRBM and FGCRBM (\cite{taylor2009composable}) are then presented by increasing level of complexity, each model adding on the previously defined model a new element.
+The three model we have used in our work are the Restricted Boltzmann Machine (RBM), the Conditional RBM (CRBM) and the Factored Gated Conditional RBM (FGCRBM). They derive from the Graphical Probabilistic Model (GPM) theory and more specifically from a class of models called Markov Random Fields (MRF) (\cite{fischer2014training}). They are presented by increasing level of complexity, each model adding a new \textit{degree of freedom} to the previous one.
 
 \subsection{Restricted-Boltzmann Machine}
 \begin{figure}
@@ -155,29 +158,30 @@ The three model we have used in our work derive from the Graphical Probabilistic
 \caption{\textit{Restricted Boltzmann Machine}. The RBM is an energy-based model. Its energy function is computed from the values of weights that link nodes. Training an RBM consists in lowering the energy function around the example from a training set. Inference in this model is easy to perform since the hidden (resp. visible) units are independent from each others.}
 \label{fig:RBM}
 \end{figure}
-A \gls{RBM} \cite{Hinton:2006:FLA:1161603.1161605} is an energy-based model that represent the joint distribution of a visible vector $\textbf{v} = (v_{1},...,v_{m})$ and a hidden vector $\textbf{h} = (h_{1},...,h_{n})$. This distribution is given by $p(v,h) = \frac{\exp^{-E(v,h)}}{Z}$ where
+A \gls{RBM} \cite{Hinton:2006:FLA:1161603.1161605} is an energy-based model that represent the joint distribution of a visible vector $\bm{v} = (v_{1},...,v_{m})$ and a hidden vector $\bm{h} = (h_{1},...,h_{n})$. This distribution is given by $p(\bm{v},\bm{h}) = \frac{\exp^{-E(\bm{v},\bm{h})}}{Z}$ where
 \begin{equation}
-E(\textbf{v},\textbf{h}) = - \sum_{i=1}^{m} a_{i} v_{i} - \sum_{j = 1}^{n} b_{j} h_{j} - \sum_{i=1}^{m} \sum_{j=1}^{n} v_{i} W_{ij} h_{j}
+E(\bm{v},\bm{h}) = - \sum_{i=1}^{m} a_{i} v_{i} - \sum_{j = 1}^{n} b_{j} h_{j} - \sum_{i=1}^{m} \sum_{j=1}^{n} v_{i} W_{ij} h_{j}
 \end{equation}
-and $Z = \sum_{v,h}\exp^{-E(v,h)}$ is a usually intractable partition function. $\Theta = \left\lbrace W , a , b \right\rbrace$ are the weights of the network.
-Each unit represent an activation function which is a simple non-linear function. Unfortunately, the gradient of the negative log-likelihood of a vector from the training database $\textbf{v}^{(l)}$ is intractable. A training algorithm called \gls{CD} \cite{hinton2002training} rely on an approximation of the model driven term of this equation by running a k-step Gibbs chain to obtain a sample $v^{(l,k)}$ (\prettyref{eq:log-lik-grad})
+and $Z = \sum_{v,h}\exp^{-E(v,h)}$ is a usually intractable partition function. $\bm{\Theta} = \left\lbrace \bm{W} , \bm{a} , \bm{b} \right\rbrace$ are the weights of the network.
+Unfortunately, the gradient of the negative log-likelihood of a vector from the training database $\bm{v}^{(l)}$ is intractable because of the negative term in right-hand part of the equation \prettyref{eq:log-lik-grad} which involves a sum over all the possible combinations of the hidden units (alternatively all the possible configurations of the visible units). A training algorithm called \gls{CD} \cite{hinton2002training} rely on an approximation of the model driven term of this equation by running a k-step Gibbs chain to obtain a sample $\bm{v}^{(l,k)}$ \prettyref{eq:log-lik-grad}.
 \begin{align}
 \label{eq:log-lik-grad}
-- \frac{\partial \ln(p(\bm{v^{(l)}}|\bm{\Theta}))}{\partial \bm{\Theta}}  &=  \mathbb{E}_{p(\textbf{h}|\bm{v^{(l)}})} \left[ \frac{\partial E(\bm{v^{(l)}},\textbf{h})}{\partial \bm{\Theta}} \right] - \mathbb{E}_{p(\textbf{h},\textbf{v})} \left[ \frac{\partial E(\textbf{v},\textbf{h})}{\partial \bm{\Theta}} \right]\\
-& \approx \mathbb{E}_{p(\textbf{h}|\bm{v^{(l)}})} \left[ \frac{\partial E(\bm{v^{(l)}},\textbf{h})}{\partial \bm{\Theta}} \right] - \mathbb{E}_{p(\textbf{h} | \bm{v^{(l,k)}})} \left[ \frac{\partial E(\bm{v^{(l,k)}},\textbf{h})}{\partial \bm{\Theta}} \right]
+- \frac{\partial \ln(p(\bm{v^{(l)}}|\bm{\Theta}))}{\partial \bm{\Theta}}  &=  \mathbb{E}_{p(\bm{h}|\bm{v^{(l)}})} \left[ \frac{\partial E(\bm{v^{(l)}},\bm{h})}{\partial \bm{\Theta}} \right] - \mathbb{E}_{p(\bm{h},\bm{v})} \left[ \frac{\partial E(\bm{v},\bm{h})}{\partial \bm{\Theta}} \right]\\
+& \approx \mathbb{E}_{p(\bm{h}|\bm{v^{(l)}})} \left[ \frac{\partial E(\bm{v^{(l)}},\bm{h})}{\partial \bm{\Theta}} \right] - \mathbb{E}_{p(\bm{h} | \bm{v^{(l,k)}})} \left[ \frac{\partial E(\bm{v^{(l,k)}},\bm{h})}{\partial \bm{\Theta}} \right]
 \end{align}
-Running a Gibbs sampling chain consists in alternatively sampling the hidden units knowing the visible units then the visible units knowing the inferred hidden units by using the marginal probabilities (\prettyref{eq:marginal_RBM}).
+
+Running a Gibbs sampling chain consists in alternatively sampling the hidden units knowing the visible units then the visible units knowing the inferred hidden units by using the marginal probabilities \prettyref{eq:marginal_RBM}.
 \begin{align}
 \label{eq:marginal_RBM}
-p(v_{i}=1|\textbf{h}) &= sigm \left( b_{i}^{(v)} + \sum_{j}W_{ij}h_{j} \right)\\
-p(h_{j}=1|\textbf{v}) &= sigm \left( b_{j}^{(h)} + \sum_{i}W_{ij}v_{i} \right)
+p(v_{i}=1|\bm{h}) &= sigm \left( a_{i} + \sum_{j}W_{ij}h_{j} \right)\\
+p(h_{j}=1|\bm{v}) &= sigm \left( b_{j} + \sum_{i}W_{ij}v_{i} \right)
 \end{align}
-where $sigm$ is the sigmoid function.
-It has been proved that the samples we obtain after an infinite number of iteration will be drawn from the joint distribution of the visible and hidden units of our model. An other approximation consists in starting the Gibbs chain from the sample $v^{(l)}$, which increases the convergence of the chain, and to limit the number of alternate sampling steps to a fixed number K, which leads to the CD-K algorithm. Hence, the CD-K algorithm can be summed up in two phase, a first one which consists in evaluating the model driven terms by running K steps of a  Gibbs sampling chain, then computing the update terms for each parameter. In a RBM, this lead to the following update rules for the parameter
+where $sigm$ is the sigmoid function. Note that sampling from the marginal distribution is easy since visible units (respectively hidden units) are independent from each others. Hence, knowing the hidden units, all the visible units can be sampled in one step. This allows fast implementation through matrix operations and is known as \textit{block sampling}.
+It has been proved \cite{bengio2009learning} that the samples we obtain after an infinite number of iteration will be drawn from the joint distribution of the visible and hidden units of our model. An other approximation consists in starting the Gibbs chain from the sample $\bm{v}^{(l)}$, which increases the convergence of the chain, and to limit the number of alternate sampling steps to a fixed number K. After evaluating the statistics (model driven terms), the parameters can be updated. The whole algorithm is called Contrastive Divergence-K (CD-K). In a RBM those update rules are given by
 \begin{align}
 \Delta W_{ij} &= <v_{i}h_{j} >_{data} - <v_{i}h_{j} >_{model}\\
-\Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
-\Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}
+\Delta a_{i} &= <v_{i}>_{data} - <v_{i}>_{model}\\
+\Delta b_{j} &= <h_{j} >_{data} - <h_{j} >_{model}
 \end{align}
 
 \subsection{Conditional RBM}
@@ -186,35 +190,41 @@ It has been proved that the samples we obtain after an infinite number of iterat
 \includegraphics[scale=0.3]{CRBM_orchestration}
 \caption{\textit{Conditional RBM}. A layer of context units is added to the standard RBM architectures. Those context units linearly modify the bias of both visible and hidden units.}
 \end{figure}
-The \gls{CRBM} model (\cite{taylor2009composable}) is a standard \gls{RBM} in which a dynamic biases conditioned is added to the visible and hidden units. The dynamic bias linearly depends of context units $\bm{x}$.
-To model time series, if we consider that the visible units $\textbf{v}(t)$ represent the current time frame, those context units can be defined as the concatenation of the N last time frames. We call this vector $\bm{x}(t) = \left( v_{1}^{(t-N)} , ... , v_{m}^{(t-N)}, ... , v_{1}^{(t)} ... , v_{m}^{(t)} \right)$, where N denotes the order of the model.
-The energy function of the Conditional RBM is given by (\prettyref{eq:energy_CRBM})
+The \gls{CRBM} model (\cite{taylor2009composable}) is an extension of the \gls{RBM}. A dynamic bias is added to the static bias of the visible ($\bm{a}$) and hidden $\bm{b}$ units. This dynamic bias linearly depends on a set of unit called context units $(\bm{x})$.
+To model time series, if we consider that the visible units $\bm{v}(t)$ represent the current time frame, those context units can be defined as the concatenation of the N last time frames $\bm{x}(t) = \left( v_{1}^{(t)} , ... , v_{m}^{(t)}, ... , v_{1}^{(t-N)} ... , v_{m}^{(t-N)} \right)$, where N denotes the order of the model.
+The energy function of the Conditional RBM is given by \prettyref{eq:energy_CRBM}
 \begin{equation}
 \label{eq:energy_CRBM}
-E(\textbf{v}(t),\textbf{h}(t)|\textbf{x}(t)) = - \sum_{i} \hat{a}_{i}(t)v_{i}(t) - \sum_{ij}W_{ij}v_{i}(t)h_{j}(t) - \sum_{j} \hat{b}_{j}(t)h_{j}(t)
+E(\bm{v}(t),\bm{h}(t)|\bm{x}(t)) = - \sum_{i} \hat{a}_{i}(t)v_{i}(t) - \sum_{ij}W_{ij}v_{i}(t)h_{j}(t) - \sum_{j} \hat{b}_{j}(t)h_{j}(t)
 \end{equation}
-where the biases are defined by $\hat{a}_{i}(t) = a_{i} + \sum_{k}A_{ki}x_{k}(t)$ and $\hat{b}_{j} = b_{j} + \sum_{k}B_{kj}x_{k}(t)$.
+where the biases are defined by 
+\begin{align*}
+\hat{a}_{i}(t) &= a_{i} + \sum_{k}A_{ki}x_{k}(t)\\
+\hat{b}_{j}(t) &= b_{j} + \sum_{k}B_{kj}x_{k}(t)
+\end{align*}
 
-The updates rules are then given by
+This model can be trained by contrastive divergence, since the marginal probability of visible and hidden units are the same as in the RBM, while replacing the static biases by the dynamics biases.
+The following updates rules are obtained
 \begin{align}
-\Delta W_{ij} &= <v_{i}h_{j} >_{data} - <v_{i}h_{j} >_{model}\\
-\Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
-\Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}\\
-\Delta A_{ik} &=<v_{i}x_{k} >_{data} - <v_{i}x_{k} >_{model}\\
-\Delta B_{jk} &= <h_{j}x_{k} >_{data} - <h_{j}x_{k} >_{model}\\
+\Delta W_{ij} 	&= <v_{i}h_{j} >_{data} - <v_{i}h_{j} >_{model}\\
+\Delta a_{i}		&= <v_{i}>_{data} - <v_{i}>_{model}\\
+\Delta b_{j}		&= <h_{j} >_{data} - <h_{j} >_{model}\\
+\Delta A_{ik} 	&=<v_{i}x_{k} >_{data} - <v_{i}x_{k} >_{model}\\
+\Delta B_{jk} 	&= <h_{j}x_{k} >_{data} - <h_{j}x_{k} >_{model}\\
 \end{align}
-
-This model appeared as an interesting solution in order to model the strong temporal relations underlying in symbolic music data. It can be trained by contrastive divergence, since the marginal probability of visible and hidden units can be easily obtained from the energy distribution.
 
 \subsection{Factored Gated Conditional RBM}
 \begin{figure}
 \centering
 \includegraphics[scale=0.25]{FGCRBM_orchestration}
+\caption{FGCRBM model. The features units ($bm{z}$) modify the energy landscape of the model by a multiplicative influence over the weights $\bm{A}$, $\bm{B}$ and $\bm{W}$. Here, the role of each units in order to perform orchestration is indicated.}
 \end{figure}
-The Factored Gated Conditional RBM model \cite{taylor2009factored} proposes to extend the Conditional RBM model by adding a layer of feature unit $z_{l}$ which modulate the weights of the conditional architecture in a multiplicative way. Hence, the weights of the networks become $\Theta = \left\lbrace W_{ijl} , A_{ikl} , B_{jkl} , \hat{a}_{i} , \hat{b}_{j} \right\rbrace$. This multiplicative influence can be understood as a modification of the energy landscape of the model. Since the number of parameter to train becomes high, the 3 dimensional tensors can be factorized into a product of three matrices by including factors $W_{ijl} = W_{if} . W_{jf} . W_{lf}$.
+The Factored Gated Conditional RBM model \cite{taylor2009factored} proposes to extend the Conditional RBM model by adding a layer of feature units $\bm{z}$ which modulate the weights of the conditional architecture in a multiplicative way. Hence, the weights of the networks become $\bm{\Theta} = \left\lbrace \bm{W} , \bm{A} , \bm{B} , \bm{a} , \bm{b} \right\rbrace$, where $\bm{W} = (W)_{ijl}$, $\bm{A}=(A)_{ikl}$ and $\bm{B}=(B)_{jkl}$ are three dimensional tensors.
+
+This multiplicative influence can be understood as a modification of the energy landscape of the model. Each configuration of the feature units defines a new energy function of the simple CRBM model defined by the other units ($\bm{v}$, $\bm{h}$, and $\bm{x}$). Since the number of parameters to train becomes high, the three dimensional tensors can be factorized into a product of three matrices by including factor units indexed by $f$ : $W_{ijl} = W_{if} . W_{jf} . W_{lf}$.
 The energy function of this Factored Gated Conditional RBM is then given by
 \begin{equation}
-E(\textbf{v}(t),\textbf{h}(t)|\textbf{x}(t),\textbf{z}(t)) = -\sum_{f}\sum_{ijl} W_{if}^{v} W_{jf}^{h} W_{lf}^{z} v_{i}(t) h_{j}(t) z_{l}(t) 
+E(\bm{v}(t),\bm{h}(t)|\bm{x}(t),\bm{z}(t)) = -\sum_{f}\sum_{ijl} W_{if}^{v} W_{jf}^{h} W_{lf}^{z} v_{i}(t) h_{j}(t) z_{l}(t) 
 - \sum_{i} \hat{a}_{i}(t)v_{i}(t) - \sum_{j} \hat{b}_{j}(t)h_{j}(t)
 \end{equation}
 where the dynamic biases of the visible and hidden units are defined by
@@ -226,7 +236,7 @@ where the dynamic biases of the visible and hidden units are defined by
 \end{equation}
 
 The FGCRBM model can be trained by contrastive divergence which lead to the following update rules for the parameter
-\begin{align}
+\begin{align*}
 \Delta b_{i}^{(v)} &= <v_{i}>_{data} - <v_{i}>_{model}\\
 \Delta b_{j}^{(h)} &= <h_{j} >_{data} - <h_{j} >_{model}\\
 \Delta W_{if}^{v} &= <v_{i}\sum_{j} W_{jf} h_{j} \sum_{l} W_{lf} z_{l}>_{data} - <v_{i}W_{jf} h_{j} \sum_{l} W_{lf} z_{l} >_{model}\\
@@ -237,7 +247,7 @@ The FGCRBM model can be trained by contrastive divergence which lead to the foll
 \Delta B_{jn}^{z} &=  <h_{j} \sum_{k}B_{kn}x_{k} \sum_{l}B_{ln}z_{l}>_{data} - <h_{j} \sum_{k}B_{kn}x_{k} \sum_{l}B_{ln}z_{l}>_{model}\\
 \Delta B_{kn}^{z} &= <x_{k} \sum_{j}B_{jn}h_{j} \sum_{l}B_{ln}z_{l}>_{data} - <x_{k} \sum_{j}B_{jn}h_{j} \sum_{l}B_{ln}z_{l}>_{model}\\
 \Delta B_{ln}^{z} &= <z_{l} \sum_{j}B_{jn}h_{j} \sum_{k}B_{kn}x_{k}>_{data} - <z_{l} \sum_{j}B_{jn}h_{j} \sum_{k}B_{kn}x_{k}>_{model}
-\end{align}
+\end{align*}
 
 \subsection{Generative models}
 \begin{figure}
@@ -297,6 +307,7 @@ $ Context(t) = \left[ Piano(t)^{T} , Orch(t-1)^{T} , ... , Orch(t-N)^{T}\right]^
 The FGCRBM model allows to separate the influence of the current piano frame and the past orchestral frames. The current piano frame defines the feature units ($z$) $ Features(t) = Piano(t)^{T} $, and the concatenation of the past orchestral frames define the context units ($x$) $ Context(t) = \left[ Orch(t-1)^{T} , ... , Orch(t-N)^{T} \right]^{T}$.
 
 \subsection{Evaluation}
+Building a quantitative evaluation framework for generative models is rarely straightforward, especially since computing the likelihood of a test sample is intractable in the model we used. A common practice is to define an auxiliary task. 
 \subsubsection{Frame-level accuracy}
 The frame level accuracy of a model over a testing set is defined as the mean value of the accuracy measured for each time frame. For each time frame, we try to predict the orchestral frame $\hat{Orch}(t)$ knowing the recent past $Orch(t-1),...,Orch(t-N)$ and the piano frame $Piano(t)$ and compare it to the original frame $Orch(t)$. The accuracy measure the difference between the predicted and original frames \cite{boulanger2012modeling,DBLP:journals/corr/LiuR14a}
 \begin{equation}
