--- a/state-of-art/deeplearning.bib
+++ b/state-of-art/deeplearning.bib
@@ -1,552 +1,504 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+
+%% Created for Léopold Crestel at 2015-09-27 22:17:37 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
 
 @article{baldi1989neural,
-  title={Neural networks and principal component analysis: Learning from examples without local minima},
-  author={Baldi, Pierre and Hornik, Kurt},
-  journal={Neural networks},
-  volume={2},
-  number={1},
-  pages={53--58},
-  year={1989},
-  publisher={Elsevier}
-}
+	Author = {Baldi, Pierre and Hornik, Kurt},
+	Journal = {Neural networks},
+	Number = {1},
+	Pages = {53--58},
+	Publisher = {Elsevier},
+	Title = {Neural networks and principal component analysis: Learning from examples without local minima},
+	Volume = {2},
+	Year = {1989}}
 
 @article{bengio2007greedy,
-  title={Greedy layer-wise training of deep networks},
-  author={Bengio, Yoshua and Lamblin, Pascal and Popovici, Dan and Larochelle, Hugo and others},
-  journal={Advances in neural information processing systems},
-  volume={19},
-  pages={153},
-  year={2007},
-  publisher={MIT; 1998}
-}
+	Author = {Bengio, Yoshua and Lamblin, Pascal and Popovici, Dan and Larochelle, Hugo and others},
+	Journal = {Advances in neural information processing systems},
+	Pages = {153},
+	Publisher = {MIT; 1998},
+	Title = {Greedy layer-wise training of deep networks},
+	Volume = {19},
+	Year = {2007}}
 
 @article{bengio2009learning,
-  title={Learning deep architectures for AI},
-  author={Bengio, Yoshua},
-  journal={Foundations and trends in Machine Learning},
-  volume={2},
-  number={1},
-  pages={1--127},
-  year={2009},
-  publisher={Now Publishers Inc.}
-}
+	Author = {Bengio, Yoshua},
+	Journal = {Foundations and trends in Machine Learning},
+	Number = {1},
+	Pages = {1--127},
+	Publisher = {Now Publishers Inc.},
+	Title = {Learning deep architectures for AI},
+	Volume = {2},
+	Year = {2009}}
 
 @article{bengio2013representation,
-  title={Representation learning: A review and new perspectives},
-  author={Bengio, Yoshua and Courville, Aaron and Vincent, Pascal},
-  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
-  volume={35},
-  number={8},
-  pages={1798--1828},
-  year={2013},
-  publisher={IEEE}
-}
+	Author = {Bengio, Yoshua and Courville, Aaron and Vincent, Pascal},
+	Journal = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+	Number = {8},
+	Pages = {1798--1828},
+	Publisher = {IEEE},
+	Title = {Representation learning: A review and new perspectives},
+	Volume = {35},
+	Year = {2013}}
 
 @incollection{bottou2010large,
-  title={Large-scale machine learning with stochastic gradient descent},
-  author={Bottou, L{\'e}on},
-  booktitle={Proceedings of COMPSTAT'2010},
-  pages={177--186},
-  year={2010},
-  publisher={Springer}
-}
+	Author = {Bottou, L{\'e}on},
+	Booktitle = {Proceedings of COMPSTAT'2010},
+	Pages = {177--186},
+	Publisher = {Springer},
+	Title = {Large-scale machine learning with stochastic gradient descent},
+	Year = {2010}}
 
 @inproceedings{carreira2005contrastive,
-  title={On contrastive divergence learning},
-  author={Carreira-Perpinan, Miguel A and Hinton, Geoffrey E},
-  booktitle={Proceedings of the tenth international workshop on artificial intelligence and statistics},
-  pages={33--40},
-  year={2005},
-  organization={Citeseer}
-}
+	Author = {Carreira-Perpinan, Miguel A and Hinton, Geoffrey E},
+	Booktitle = {Proceedings of the tenth international workshop on artificial intelligence and statistics},
+	Organization = {Citeseer},
+	Pages = {33--40},
+	Title = {On contrastive divergence learning},
+	Year = {2005}}
 
 @article{casey2008content,
-  title={Content-based music information retrieval: Current directions and future challenges},
-  author={Casey, Michael A and Veltkamp, Remco and Goto, Masataka and Leman, Marc and Rhodes, Christophe and Slaney, Malcolm},
-  journal={Proceedings of the IEEE},
-  volume={96},
-  number={4},
-  pages={668--696},
-  year={2008},
-  publisher={IEEE}
-}
+	Author = {Casey, Michael A and Veltkamp, Remco and Goto, Masataka and Leman, Marc and Rhodes, Christophe and Slaney, Malcolm},
+	Journal = {Proceedings of the IEEE},
+	Number = {4},
+	Pages = {668--696},
+	Publisher = {IEEE},
+	Title = {Content-based music information retrieval: Current directions and future challenges},
+	Volume = {96},
+	Year = {2008}}
 
 @inproceedings{chen2010deep,
-  title={Deep Learning of Invariant Spatiotemporal Features from Video},
-  author={Chen, Bo and Ting, Jo-Anne and Marlin, Ben and de Freitas, Nando},
-  booktitle={NIPS Workshop},
-  year={2010}
-}
+	Author = {Chen, Bo and Ting, Jo-Anne and Marlin, Ben and de Freitas, Nando},
+	Booktitle = {NIPS Workshop},
+	Title = {Deep Learning of Invariant Spatiotemporal Features from Video},
+	Year = {2010}}
 
 @inproceedings{deng2010binary,
-  title={Binary coding of speech spectrograms using a deep auto-encoder.},
-  author={Deng, Li and Seltzer, Michael L and Yu, Dong and Acero, Alex and Mohamed, Abdel-Rahman and Hinton, Geoffrey E},
-  booktitle={Interspeech},
-  pages={1692--1695},
-  year={2010},
-  organization={Citeseer}
-}
+	Author = {Deng, Li and Seltzer, Michael L and Yu, Dong and Acero, Alex and Mohamed, Abdel-Rahman and Hinton, Geoffrey E},
+	Booktitle = {Interspeech},
+	Organization = {Citeseer},
+	Pages = {1692--1695},
+	Title = {Binary coding of speech spectrograms using a deep auto-encoder.},
+	Year = {2010}}
 
 @article{duchi2011adaptive,
-  title={Adaptive subgradient methods for online learning and stochastic optimization},
-  author={Duchi, John and Hazan, Elad and Singer, Yoram},
-  journal={The Journal of Machine Learning Research},
-  volume={12},
-  pages={2121--2159},
-  year={2011},
-  publisher={JMLR. org}
-}
+	Author = {Duchi, John and Hazan, Elad and Singer, Yoram},
+	Journal = {The Journal of Machine Learning Research},
+	Pages = {2121--2159},
+	Publisher = {JMLR. org},
+	Title = {Adaptive subgradient methods for online learning and stochastic optimization},
+	Volume = {12},
+	Year = {2011}}
 
 @inproceedings{ellis2012large,
-  title={Large-scale cover song recognition using the 2d fourier transform magnitude},
-  author={Ellis, Daniel PW and Thierry, Bertin-Mahieux},
-  booktitle={The 13th international society for music information retrieval conference},
-  pages={241--246},
-  year={2012}
-}
+	Author = {Ellis, Daniel PW and Thierry, Bertin-Mahieux},
+	Booktitle = {The 13th international society for music information retrieval conference},
+	Pages = {241--246},
+	Title = {Large-scale cover song recognition using the 2d fourier transform magnitude},
+	Year = {2012}}
 
 @inproceedings{erhan2009difficulty,
-  title={The difficulty of training deep architectures and the effect of unsupervised pre-training},
-  author={Erhan, Dumitru and Manzagol, Pierre-Antoine and Bengio, Yoshua and Bengio, Samy and Vincent, Pascal},
-  booktitle={International Conference on artificial intelligence and statistics},
-  pages={153--160},
-  year={2009}
-}
+	Author = {Erhan, Dumitru and Manzagol, Pierre-Antoine and Bengio, Yoshua and Bengio, Samy and Vincent, Pascal},
+	Booktitle = {International Conference on artificial intelligence and statistics},
+	Pages = {153--160},
+	Title = {The difficulty of training deep architectures and the effect of unsupervised pre-training},
+	Year = {2009}}
 
 @article{gers2000learning,
-  title={Learning to forget: Continual prediction with LSTM},
-  author={Gers, Felix A and Schmidhuber, J{\"u}rgen and Cummins, Fred},
-  journal={Neural computation},
-  volume={12},
-  number={10},
-  pages={2451--2471},
-  year={2000},
-  publisher={MIT Press}
-}
+	Author = {Gers, Felix A and Schmidhuber, J{\"u}rgen and Cummins, Fred},
+	Journal = {Neural computation},
+	Number = {10},
+	Pages = {2451--2471},
+	Publisher = {MIT Press},
+	Title = {Learning to forget: Continual prediction with LSTM},
+	Volume = {12},
+	Year = {2000}}
 
 @inproceedings{goodfellow2012large,
-  title={Large-Scale Feature Learning With Spike-and-Slab Sparse Coding},
-  author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron C},
-  booktitle={Proceedings of the 29th International Conference on Machine Learning (ICML-12)},
-  pages={1439--1446},
-  year={2012}
-}
+	Author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron C},
+	Booktitle = {Proceedings of the 29th International Conference on Machine Learning (ICML-12)},
+	Pages = {1439--1446},
+	Title = {Large-Scale Feature Learning With Spike-and-Slab Sparse Coding},
+	Year = {2012}}
 
 @article{hinton2006fast,
-  title={A fast learning algorithm for deep belief nets},
-  author={Hinton, Geoffrey and Osindero, Simon and Teh, Yee-Whye},
-  journal={Neural computation},
-  volume={18},
-  number={7},
-  pages={1527--1554},
-  year={2006},
-  publisher={MIT Press}
-}
+	Author = {Hinton, Geoffrey and Osindero, Simon and Teh, Yee-Whye},
+	Journal = {Neural computation},
+	Number = {7},
+	Pages = {1527--1554},
+	Publisher = {MIT Press},
+	Title = {A fast learning algorithm for deep belief nets},
+	Volume = {18},
+	Year = {2006}}
 
 @article{hinton2010practical,
-  title={A practical guide to training restricted Boltzmann machines},
-  author={Hinton, Geoffrey},
-  journal={Momentum},
-  volume={9},
-  number={1},
-  pages={926},
-  year={2010}
-}
+	Author = {Hinton, Geoffrey},
+	Journal = {Momentum},
+	Number = {1},
+	Pages = {926},
+	Title = {A practical guide to training restricted Boltzmann machines},
+	Volume = {9},
+	Year = {2010}}
 
 @article{hochreiter1997long,
-  title={Long short-term memory},
-  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
-  journal={Neural computation},
-  volume={9},
-  number={8},
-  pages={1735--1780},
-  year={1997},
-  publisher={MIT Press}
-}
+	Author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+	Journal = {Neural computation},
+	Number = {8},
+	Pages = {1735--1780},
+	Publisher = {MIT Press},
+	Title = {Long short-term memory},
+	Volume = {9},
+	Year = {1997}}
 
 @article{hubel1968receptive,
-  title={Receptive fields and functional architecture of monkey striate cortex},
-  author={Hubel, David H and Wiesel, Torsten N},
-  journal={The Journal of physiology},
-  volume={195},
-  number={1},
-  pages={215--243},
-  year={1968},
-  publisher={Wiley Online Library}
-}
+	Author = {Hubel, David H and Wiesel, Torsten N},
+	Journal = {The Journal of physiology},
+	Number = {1},
+	Pages = {215--243},
+	Publisher = {Wiley Online Library},
+	Title = {Receptive fields and functional architecture of monkey striate cortex},
+	Volume = {195},
+	Year = {1968}}
 
 @article{hupe1998cortical,
-  title={Cortical feedback improves discrimination between figure and background by V1, V2 and V3 neurons},
-  author={Hupe, JM and James, AC and Payne, BR and Lomber, SG and Girard, P and Bullier, J},
-  journal={Nature},
-  volume={394},
-  number={6695},
-  pages={784--787},
-  year={1998},
-  publisher={Nature Publishing Group}
-}
+	Author = {Hupe, JM and James, AC and Payne, BR and Lomber, SG and Girard, P and Bullier, J},
+	Journal = {Nature},
+	Number = {6695},
+	Pages = {784--787},
+	Publisher = {Nature Publishing Group},
+	Title = {Cortical feedback improves discrimination between figure and background by V1, V2 and V3 neurons},
+	Volume = {394},
+	Year = {1998}}
 
 @inproceedings{humphrey2012rethinking,
-  title={Rethinking automatic chord recognition with convolutional neural networks},
-  author={Humphrey, Eric J and Bello, Juan Pablo},
-  booktitle={Machine Learning and Applications (ICMLA), 2012 11th International Conference on},
-  volume={2},
-  pages={357--362},
-  year={2012},
-  organization={IEEE}
-}
+	Author = {Humphrey, Eric J and Bello, Juan Pablo},
+	Booktitle = {Machine Learning and Applications (ICMLA), 2012 11th International Conference on},
+	Organization = {IEEE},
+	Pages = {357--362},
+	Title = {Rethinking automatic chord recognition with convolutional neural networks},
+	Volume = {2},
+	Year = {2012}}
 
 @article{humphrey2013feature,
-  title={Feature learning and deep architectures: new directions for music informatics},
-  author={Humphrey, Eric J and Bello, Juan P and LeCun, Yann},
-  journal={Journal of Intelligent Information Systems},
-  volume={41},
-  number={3},
-  pages={461--481},
-  year={2013},
-  publisher={Springer}
-}
+	Author = {Humphrey, Eric J and Bello, Juan P and LeCun, Yann},
+	Journal = {Journal of Intelligent Information Systems},
+	Number = {3},
+	Pages = {461--481},
+	Publisher = {Springer},
+	Title = {Feature learning and deep architectures: new directions for music informatics},
+	Volume = {41},
+	Year = {2013}}
 
 @inproceedings{kavukcuoglu2009learning,
-  title={Learning invariant features through topographic filter maps},
-  author={Kavukcuoglu, Koray and Ranzato, Marc Aurelio and Fergus, Rob and Le-Cun, Yann},
-  booktitle={Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
-  pages={1605--1612},
-  year={2009},
-  organization={IEEE}
-}
+	Author = {Kavukcuoglu, Koray and Ranzato, Marc Aurelio and Fergus, Rob and Le-Cun, Yann},
+	Booktitle = {Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
+	Organization = {IEEE},
+	Pages = {1605--1612},
+	Title = {Learning invariant features through topographic filter maps},
+	Year = {2009}}
 
 @article{langkvist2014review,
-  title={A review of unsupervised feature learning and deep learning for time-series modeling},
-  author={L{\"a}ngkvist, Martin and Karlsson, Lars and Loutfi, Amy},
-  journal={Pattern Recognition Letters},
-  volume={42},
-  pages={11--24},
-  year={2014},
-  publisher={Elsevier}
-}
+	Author = {L{\"a}ngkvist, Martin and Karlsson, Lars and Loutfi, Amy},
+	Journal = {Pattern Recognition Letters},
+	Pages = {11--24},
+	Publisher = {Elsevier},
+	Title = {A review of unsupervised feature learning and deep learning for time-series modeling},
+	Volume = {42},
+	Year = {2014}}
 
 @inproceedings{le2013building,
-  title={Building high-level features using large scale unsupervised learning},
-  author={Le, Quoc V and Monga, Rajat and Devin, Matthieu and Chen, Kai and Corrado, Greg S and Dean, Jeff and Ng, Andrew Y},
-  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
-  pages={8595--8598},
-  year={2013},
-  organization={IEEE}
-}
+	Author = {Le, Quoc V and Monga, Rajat and Devin, Matthieu and Chen, Kai and Corrado, Greg S and Dean, Jeff and Ng, Andrew Y},
+	Booktitle = {Acoustics, Speech and Signal Processing (ICASSP), 2013 IEEE International Conference on},
+	Organization = {IEEE},
+	Pages = {8595--8598},
+	Title = {Building high-level features using large scale unsupervised learning},
+	Year = {2013}}
 
 @article{lecun1998gradient,
-  title={Gradient-based learning applied to document recognition},
-  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
-  journal={Proceedings of the IEEE},
-  volume={86},
-  number={11},
-  pages={2278--2324},
-  year={1998},
-  publisher={IEEE}
-}
+	Author = {LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+	Journal = {Proceedings of the IEEE},
+	Number = {11},
+	Pages = {2278--2324},
+	Publisher = {IEEE},
+	Title = {Gradient-based learning applied to document recognition},
+	Volume = {86},
+	Year = {1998}}
 
 @inproceedings{lee2008sparse,
-  title={Sparse deep belief net model for visual area V2},
-  author={Lee, Honglak and Ekanadham, Chaitanya and Ng, Andrew Y},
-  booktitle={Advances in neural information processing systems},
-  pages={873--880},
-  year={2008}
-}
+	Author = {Lee, Honglak and Ekanadham, Chaitanya and Ng, Andrew Y},
+	Booktitle = {Advances in neural information processing systems},
+	Pages = {873--880},
+	Title = {Sparse deep belief net model for visual area V2},
+	Year = {2008}}
 
 @inproceedings{lee2009convolutional,
-  title={Convolutional deep belief networks for scalable unsupervised learning of hierarchical representations},
-  author={Lee, Honglak and Grosse, Roger and Ranganath, Rajesh and Ng, Andrew Y},
-  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
-  pages={609--616},
-  year={2009},
-  organization={ACM}
-}
+	Author = {Lee, Honglak and Grosse, Roger and Ranganath, Rajesh and Ng, Andrew Y},
+	Booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+	Organization = {ACM},
+	Pages = {609--616},
+	Title = {Convolutional deep belief networks for scalable unsupervised learning of hierarchical representations},
+	Year = {2009}}
 
 @article{liu1989limited,
-  title={On the limited memory BFGS method for large scale optimization},
-  author={Liu, Dong C and Nocedal, Jorge},
-  journal={Mathematical programming},
-  volume={45},
-  number={1-3},
-  pages={503--528},
-  year={1989},
-  publisher={Springer}
-}
+	Author = {Liu, Dong C and Nocedal, Jorge},
+	Journal = {Mathematical programming},
+	Number = {1-3},
+	Pages = {503--528},
+	Publisher = {Springer},
+	Title = {On the limited memory BFGS method for large scale optimization},
+	Volume = {45},
+	Year = {1989}}
 
 @incollection{martens2012training,
-  title={Training deep and recurrent networks with hessian-free optimization},
-  author={Martens, James and Sutskever, Ilya},
-  booktitle={Neural Networks: Tricks of the Trade},
-  pages={479--535},
-  year={2012},
-  publisher={Springer}
-}
+	Author = {Martens, James and Sutskever, Ilya},
+	Booktitle = {Neural Networks: Tricks of the Trade},
+	Pages = {479--535},
+	Publisher = {Springer},
+	Title = {Training deep and recurrent networks with hessian-free optimization},
+	Year = {2012}}
 
 @incollection{masci2011stacked,
-  title={Stacked convolutional auto-encoders for hierarchical feature extraction},
-  author={Masci, Jonathan and Meier, Ueli and Cire{\c{s}}an, Dan and Schmidhuber, J{\"u}rgen},
-  booktitle={Artificial Neural Networks and Machine Learning--ICANN 2011},
-  pages={52--59},
-  year={2011},
-  publisher={Springer}
-}
+	Author = {Masci, Jonathan and Meier, Ueli and Cire{\c{s}}an, Dan and Schmidhuber, J{\"u}rgen},
+	Booktitle = {Artificial Neural Networks and Machine Learning--ICANN 2011},
+	Pages = {52--59},
+	Publisher = {Springer},
+	Title = {Stacked convolutional auto-encoders for hierarchical feature extraction},
+	Year = {2011}}
 
 @inproceedings{memisevic2007unsupervised,
-title={Unsupervised learning of image transformations},
-author={Memisevic, Roland and Hinton, Geoffrey},
-booktitle={Computer Vision and Pattern Recognition, 2007. CVPR'07. IEEE Conference on},
-pages={1--8},
-year={2007},
-organization={IEEE}
-}
+	Author = {Memisevic, Roland and Hinton, Geoffrey},
+	Booktitle = {Computer Vision and Pattern Recognition, 2007. CVPR'07. IEEE Conference on},
+	Organization = {IEEE},
+	Pages = {1--8},
+	Title = {Unsupervised learning of image transformations},
+	Year = {2007}}
 
 @inproceedings{mnih2007three,
-  title={Three new graphical models for statistical language modelling},
-  author={Mnih, Andriy and Hinton, Geoffrey},
-  booktitle={Proceedings of the 24th international conference on Machine learning},
-  pages={641--648},
-  year={2007},
-  organization={ACM}
-}
+	Author = {Mnih, Andriy and Hinton, Geoffrey},
+	Booktitle = {Proceedings of the 24th international conference on Machine learning},
+	Organization = {ACM},
+	Pages = {641--648},
+	Title = {Three new graphical models for statistical language modelling},
+	Year = {2007}}
 
 @article{mnih2015human,
-  title={Human-level control through deep reinforcement learning},
-  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
-  journal={Nature},
-  volume={518},
-  number={7540},
-  pages={529--533},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
+	Author = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+	Journal = {Nature},
+	Number = {7540},
+	Pages = {529--533},
+	Publisher = {Nature Publishing Group},
+	Title = {Human-level control through deep reinforcement learning},
+	Volume = {518},
+	Year = {2015}}
 
 @inproceedings{nair20093d,
-title={3D object recognition with deep belief nets},
-author={Nair, Vinod and Hinton, Geoffrey E},
-booktitle={Advances in Neural Information Processing Systems},
-pages={1339--1347},
-year={2009}
-}
+	Author = {Nair, Vinod and Hinton, Geoffrey E},
+	Booktitle = {Advances in Neural Information Processing Systems},
+	Pages = {1339--1347},
+	Title = {3D object recognition with deep belief nets},
+	Year = {2009}}
 
 @article{olshausen1997sparse,
-  title={Sparse coding with an overcomplete basis set: A strategy employed by V1?},
-  author={Olshausen, Bruno A and Field, David J},
-  journal={Vision research},
-  volume={37},
-  number={23},
-  pages={3311--3325},
-  year={1997},
-  publisher={Elsevier}
-}
+	Author = {Olshausen, Bruno A and Field, David J},
+	Journal = {Vision research},
+	Number = {23},
+	Pages = {3311--3325},
+	Publisher = {Elsevier},
+	Title = {Sparse coding with an overcomplete basis set: A strategy employed by V1?},
+	Volume = {37},
+	Year = {1997}}
 
 @article{pineda1987generalization,
-title={Generalization of back-propagation to recurrent neural networks},
-author={Pineda, Fernando J},
-journal={Physical review letters},
-volume={59},
-number={19},
-pages={2229},
-year={1987},
-publisher={APS}
-}
+	Author = {Pineda, Fernando J},
+	Journal = {Physical review letters},
+	Number = {19},
+	Pages = {2229},
+	Publisher = {APS},
+	Title = {Generalization of back-propagation to recurrent neural networks},
+	Volume = {59},
+	Year = {1987}}
 
 @inproceedings{ranzato2007sparse,
-  title={Sparse feature learning for deep belief networks},
-  author={Ranzato, Marc-Aurelio and Boureau, Y-lan and Cun, Yann L},
-  booktitle={Advances in neural information processing systems},
-  pages={1185--1192},
-  year={2007}
-}
+	Author = {Ranzato, Marc-Aurelio and Boureau, Y-lan and Cun, Yann L},
+	Booktitle = {Advances in neural information processing systems},
+	Pages = {1185--1192},
+	Title = {Sparse feature learning for deep belief networks},
+	Year = {2007}}
 
 @inproceedings{rifai2011contractive,
-  title={Contractive auto-encoders: Explicit invariance during feature extraction},
-  author={Rifai, Salah and Vincent, Pascal and Muller, Xavier and Glorot, Xavier and Bengio, Yoshua},
-  booktitle={Proceedings of the 28th International Conference on Machine Learning (ICML-11)},
-  pages={833--840},
-  year={2011}
-}
+	Author = {Rifai, Salah and Vincent, Pascal and Muller, Xavier and Glorot, Xavier and Bengio, Yoshua},
+	Booktitle = {Proceedings of the 28th International Conference on Machine Learning (ICML-11)},
+	Pages = {833--840},
+	Title = {Contractive auto-encoders: Explicit invariance during feature extraction},
+	Year = {2011}}
 
 @incollection{rifai2011higher,
-  title={Higher order contractive auto-encoder},
-  author={Rifai, Salah and Mesnil, Gr{\'e}goire and Vincent, Pascal and Muller, Xavier and Bengio, Yoshua and Dauphin, Yann and Glorot, Xavier},
-  booktitle={Machine Learning and Knowledge Discovery in Databases},
-  pages={645--660},
-  year={2011},
-  publisher={Springer}
-}
+	Author = {Rifai, Salah and Mesnil, Gr{\'e}goire and Vincent, Pascal and Muller, Xavier and Bengio, Yoshua and Dauphin, Yann and Glorot, Xavier},
+	Booktitle = {Machine Learning and Knowledge Discovery in Databases},
+	Pages = {645--660},
+	Publisher = {Springer},
+	Title = {Higher order contractive auto-encoder},
+	Year = {2011}}
 
 @inproceedings{rumelhart1988learning,
-  title={Learning internal representations by error propagation},
-  author={Rumelhart, DE and Hinton, GE and Williams, RJ},
-  booktitle={Neurocomputing: foundations of research},
-  pages={673--695},
-  year={1988},
-  organization={MIT Press}
-}
+	Author = {Rumelhart, DE and Hinton, GE and Williams, RJ},
+	Booktitle = {Neurocomputing: foundations of research},
+	Organization = {MIT Press},
+	Pages = {673--695},
+	Title = {Learning internal representations by error propagation},
+	Year = {1988}}
 
 @inproceedings{salakhutdinov2007restricted,
-  title={Restricted Boltzmann machines for collaborative filtering},
-  author={Salakhutdinov, Ruslan and Mnih, Andriy and Hinton, Geoffrey},
-  booktitle={Proceedings of the 24th international conference on Machine learning},
-  pages={791--798},
-  year={2007},
-  organization={ACM}
-}
+	Author = {Salakhutdinov, Ruslan and Mnih, Andriy and Hinton, Geoffrey},
+	Booktitle = {Proceedings of the 24th international conference on Machine learning},
+	Organization = {ACM},
+	Pages = {791--798},
+	Title = {Restricted Boltzmann machines for collaborative filtering},
+	Year = {2007}}
 
 @inproceedings{salakhutdinov2009deep,
-  title={Deep boltzmann machines},
-  author={Salakhutdinov, Ruslan and Hinton, Geoffrey E},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  pages={448--455},
-  year={2009}
-}
+	Author = {Salakhutdinov, Ruslan and Hinton, Geoffrey E},
+	Booktitle = {International Conference on Artificial Intelligence and Statistics},
+	Pages = {448--455},
+	Title = {Deep boltzmann machines},
+	Year = {2009}}
 
 @inproceedings{saxe2011random,
-  title={On random weights and unsupervised feature learning},
-  author={Saxe, Andrew and Koh, Pang W and Chen, Zhenghao and Bhand, Maneesh and Suresh, Bipin and Ng, Andrew Y},
-  booktitle={Proceedings of the 28th International Conference on Machine Learning (ICML-11)},
-  pages={1089--1096},
-  year={2011}
-}
+	Author = {Saxe, Andrew and Koh, Pang W and Chen, Zhenghao and Bhand, Maneesh and Suresh, Bipin and Ng, Andrew Y},
+	Booktitle = {Proceedings of the 28th International Conference on Machine Learning (ICML-11)},
+	Pages = {1089--1096},
+	Title = {On random weights and unsupervised feature learning},
+	Year = {2011}}
 
 @inproceedings{sutskever2007learning,
-  title={Learning multilevel distributed representations for high-dimensional sequences},
-  author={Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  pages={548--555},
-  year={2007}
-}
+	Author = {Sutskever, Ilya and Hinton, Geoffrey E},
+	Booktitle = {International Conference on Artificial Intelligence and Statistics},
+	Pages = {548--555},
+	Title = {Learning multilevel distributed representations for high-dimensional sequences},
+	Year = {2007}}
 
 @phdthesis{sutskever2013training,
-  title={Training recurrent neural networks},
-  author={Sutskever, Ilya},
-  year={2013},
-  school={University of Toronto}
-}
+	Author = {Sutskever, Ilya},
+	School = {University of Toronto},
+	Title = {Training recurrent neural networks},
+	Year = {2013}}
 
 @inproceedings{tang2010deep,
-  title={Deep networks for robust visual recognition},
-  author={Tang, Yichuan and Eliasmith, Chris},
-  booktitle={Proceedings of the 27th International Conference on Machine Learning (ICML-10)},
-  pages={1055--1062},
-  year={2010}
-}
+	Author = {Tang, Yichuan and Eliasmith, Chris},
+	Booktitle = {Proceedings of the 27th International Conference on Machine Learning (ICML-10)},
+	Pages = {1055--1062},
+	Title = {Deep networks for robust visual recognition},
+	Year = {2010}}
 
 @inproceedings{taylor2006modeling,
-  title={Modeling human motion using binary latent variables},
-  author={Taylor, Graham W and Hinton, Geoffrey E and Roweis, Sam T},
-  booktitle={Advances in neural information processing systems},
-  pages={1345--1352},
-  year={2006}
-}
+	Author = {Taylor, Graham W and Hinton, Geoffrey E and Roweis, Sam T},
+	Booktitle = {Advances in neural information processing systems},
+	Pages = {1345--1352},
+	Title = {Modeling human motion using binary latent variables},
+	Year = {2006}}
 
 @inproceedings{taylor2009factored,
-  title={Factored conditional restricted Boltzmann machines for modeling motion style},
-  author={Taylor, Graham W and Hinton, Geoffrey E},
-  booktitle={Proceedings of the 26th annual international conference on machine learning},
-  pages={1025--1032},
-  year={2009},
-  organization={ACM}
-}
+	Author = {Taylor, Graham W and Hinton, Geoffrey E},
+	Booktitle = {Proceedings of the 26th annual international conference on machine learning},
+	Organization = {ACM},
+	Pages = {1025--1032},
+	Title = {Factored conditional restricted Boltzmann machines for modeling motion style},
+	Year = {2009}}
 
 @article{teh2001rate,
-  title={Rate-coded restricted Boltzmann machines for face recognition},
-  author={Teh, Yee Whye and Hinton, Geoffrey E},
-  journal={Advances in neural information processing systems},
-  pages={908--914},
-  year={2001},
-  publisher={MIT; 1998}
-}
+	Author = {Teh, Yee Whye and Hinton, Geoffrey E},
+	Journal = {Advances in neural information processing systems},
+	Pages = {908--914},
+	Publisher = {MIT; 1998},
+	Title = {Rate-coded restricted Boltzmann machines for face recognition},
+	Year = {2001}}
 
 @inproceedings{tieleman2008training,
-  title={Training restricted Boltzmann machines using approximations to the likelihood gradient},
-  author={Tieleman, Tijmen},
-  booktitle={Proceedings of the 25th international conference on Machine learning},
-  pages={1064--1071},
-  year={2008},
-  organization={ACM}
-}
+	Author = {Tieleman, Tijmen},
+	Booktitle = {Proceedings of the 25th international conference on Machine learning},
+	Organization = {ACM},
+	Pages = {1064--1071},
+	Title = {Training restricted Boltzmann machines using approximations to the likelihood gradient},
+	Year = {2008}}
 
 @inproceedings{tieleman2009using,
-  title={Using fast weights to improve persistent contrastive divergence},
-  author={Tieleman, Tijmen and Hinton, Geoffrey},
-  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
-  pages={1033--1040},
-  year={2009},
-  organization={ACM}
-}
+	Author = {Tieleman, Tijmen and Hinton, Geoffrey},
+	Booktitle = {Proceedings of the 26th Annual International Conference on Machine Learning},
+	Organization = {ACM},
+	Pages = {1033--1040},
+	Title = {Using fast weights to improve persistent contrastive divergence},
+	Year = {2009}}
 
 @article{utgoff2002many,
-  title={Many-layered learning},
-  author={Utgoff, Paul E and Stracuzzi, David J},
-  journal={Neural Computation},
-  volume={14},
-  number={10},
-  pages={2497--2529},
-  year={2002},
-  publisher={MIT Press}
-}
+	Author = {Utgoff, Paul E and Stracuzzi, David J},
+	Journal = {Neural Computation},
+	Number = {10},
+	Pages = {2497--2529},
+	Publisher = {MIT Press},
+	Title = {Many-layered learning},
+	Volume = {14},
+	Year = {2002}}
 
 @article{vincent2010stacked,
-  title={Stacked denoising autoencoders: Learning useful representations in a deep network with a local denoising criterion},
-  author={Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
-  journal={The Journal of Machine Learning Research},
-  volume={11},
-  pages={3371--3408},
-  year={2010},
-  publisher={JMLR. org}
-}
+	Author = {Vincent, Pascal and Larochelle, Hugo and Lajoie, Isabelle and Bengio, Yoshua and Manzagol, Pierre-Antoine},
+	Journal = {The Journal of Machine Learning Research},
+	Pages = {3371--3408},
+	Publisher = {JMLR. org},
+	Title = {Stacked denoising autoencoders: Learning useful representations in a deep network with a local denoising criterion},
+	Volume = {11},
+	Year = {2010}}
 
 @article{vincent2011connection,
-  title={A connection between score matching and denoising autoencoders},
-  author={Vincent, Pascal},
-  journal={Neural computation},
-  volume={23},
-  number={7},
-  pages={1661--1674},
-  year={2011},
-  publisher={MIT Press}
-}
+	Author = {Vincent, Pascal},
+	Journal = {Neural computation},
+	Number = {7},
+	Pages = {1661--1674},
+	Publisher = {MIT Press},
+	Title = {A connection between score matching and denoising autoencoders},
+	Volume = {23},
+	Year = {2011}}
 
 @article{waibel1989modular,
-  title={Modular construction of time-delay neural networks for speech recognition},
-  author={Waibel, Alex},
-  journal={Neural computation},
-  volume={1},
-  number={1},
-  pages={39--46},
-  year={1989},
-  publisher={MIT Press}
-}
+	Author = {Waibel, Alex},
+	Journal = {Neural computation},
+	Number = {1},
+	Pages = {39--46},
+	Publisher = {MIT Press},
+	Title = {Modular construction of time-delay neural networks for speech recognition},
+	Volume = {1},
+	Year = {1989}}
 
 @article{werbos1990backpropagation,
-  title={Backpropagation through time: what it does and how to do it},
-  author={Werbos, Paul J},
-  journal={Proceedings of the IEEE},
-  volume={78},
-  number={10},
-  pages={1550--1560},
-  year={1990},
-  publisher={IEEE}
-}
+	Author = {Werbos, Paul J},
+	Journal = {Proceedings of the IEEE},
+	Number = {10},
+	Pages = {1550--1560},
+	Publisher = {IEEE},
+	Title = {Backpropagation through time: what it does and how to do it},
+	Volume = {78},
+	Year = {1990}}
 
 @incollection{weston2012deep,
-  title={Deep learning via semi-supervised embedding},
-  author={Weston, Jason and Ratle, Fr{\'e}d{\'e}ric and Mobahi, Hossein and Collobert, Ronan},
-  booktitle={Neural Networks: Tricks of the Trade},
-  pages={639--655},
-  year={2012},
-  publisher={Springer}
-}
+	Author = {Weston, Jason and Ratle, Fr{\'e}d{\'e}ric and Mobahi, Hossein and Collobert, Ronan},
+	Booktitle = {Neural Networks: Tricks of the Trade},
+	Pages = {639--655},
+	Publisher = {Springer},
+	Title = {Deep learning via semi-supervised embedding},
+	Year = {2012}}
 
 @article{yu2011deep,
-  title={Deep learning and its applications to signal and information processing [exploratory dsp]},
-  author={Yu, Dong and Deng, Li},
-  journal={Signal Processing Magazine, IEEE},
-  volume={28},
-  number={1},
-  pages={145--154},
-  year={2011},
-  publisher={IEEE}
-}
+	Author = {Yu, Dong and Deng, Li},
+	Journal = {Signal Processing Magazine, IEEE},
+	Number = {1},
+	Pages = {145--154},
+	Publisher = {IEEE},
+	Title = {Deep learning and its applications to signal and information processing [exploratory dsp]},
+	Volume = {28},
+	Year = {2011}}
